# mfcgui

./: README.md  environment.yml  pyproject.toml
mfcgui/: __main__.py
mfcgui/views/: main.qml
